# freight-rate-intelligence

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  app.py  freight-rate-intelligence-PRD.md  pipeline.py  pyproject.toml  requirements.txt
.claude/: settings.json  settings.local.json
.claude/commands/: fix-tests.md  run-smoke.md  validate-schema.md
.claude/rules/: agents.md
.claude/skills/freight-backlog/: SKILL.md
.streamlit/: config.toml
agents/: __init__.py  hidden_charge.py  rate_comparator.py  router.py  summarizer.py
docs/superpowers/plans/: 2026-04-17-phase1-scaffold.md  2026-04-18-phase2-scraper-cache.md  2026-04-18-phase3-agents.md  2026-04-22-phase5-tests.md  2026-04-24-phase6-deploy.md  2026-05-25-ccaf-architecture-improvements.md
docs/superpowers/specs/: 2026-04-17-phase1-scaffold-design.md  2026-04-18-phase2-scraper-cache-design.md  2026-04-18-phase3-agents-design.md  2026-04-22-phase5-tests-design.md  2026-04-24-phase6-deploy-design.md  2026-05-25-ccaf-architecture-improvements-design.md
knowledge_base/: charge_patterns.json  ingest.py
tests/: conftest.py  test_agents.py  test_cache.py  test_errors.py  test_llm_router.py  test_pageindex_client.py  test_pipeline.py  test_rag.py  test_scraper.py  test_smoke.py  test_ui_smoke.py  test_validator.py
tests/fixtures/: freightos_delhi_rotterdam.html  icontainers_delhi_rotterdam.html  searates_delhi_rotterdam.html
tools/: cache.py  errors.py  llm_router.py  pageindex_client.py  scraper.py  validator.py
