[project]
name = "freight-rate-intelligence"
version = "0.1.0"
description = "AI-powered freight rate comparison with hidden-charge detection"
authors = [{ name = "Shashank Gupta" }]
requires-python = ">=3.11,<3.13"
readme = "README.md"

dependencies = [
  "requests>=2.31",
  "python-dotenv>=1.0",
  "beautifulsoup4>=4.12",
  "lxml>=5.2",
  "langchain>=0.3",
  "langchain-core>=0.3",
  "langchain-litellm>=0.1",
  "litellm>=1.50",
  "pydantic>=2.7",
  "streamlit>=1.35",
]

[tool.uv]
dev-dependencies = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
]

[tool.hatch.build.targets.wheel]
only-packages = true
packages = ["src/freight_rate_intelligence"]
force-include = {}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
